# safcom

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md  quickstart.md
docs/api-reference/: callbacks.md  cli.md  index.md  models.md  mpesa.md
docs/guides/: errors.md  faq.md  index.md  testing.md
docs/tutorial/: b2c.md  balance.md  index.md  production.md  query-status.md  stk-push.md
examples/: fastapi_app.py  flask_app.py
safcom/: __init__.py  auth.py  callbacks.py  cli.py  exceptions.py  models.py  mpesa.py
tests/: test_callbacks.py  test_mpesa.py
