[project]
name = "safcom"
version = "0.1.0"
description = "M-Pesa API wrapper for Kenyan developers — STK push, callbacks, B2C, and more."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
safcom = "safcom.cli:main"

[tool.setuptools.packages.find]
include = ["safcom*"]
