[project]
name = "safcom"
version = "0.1.0"
description = "M-Pesa API wrapper for Kenyan developers — STK push, callbacks, B2C, and more."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.110.0", "uvicorn>=0.29.0"]
flask = ["flask>=3.0.0"]

docs = ["mkdocs-material>=9.5.0", "mkdocstrings>=0.25.0", "mkdocstrings-python>=1.10.0", "black>=24.0"]
dev = ["pytest>=8.0", "httpx>=0.27.0"]

[project.scripts]
safcom = "safcom.cli:main"

[tool.setuptools.packages.find]
include = ["safcom*"]
